🏝👩 Updated with Glitch

--- a/package.json
+++ b/package.json
@@ -1,19 +1,29 @@
 {
-	"author": "kba",
-	"name": "fcc-learn-npm-package-json",
+  "author": "kba",
+  "name": "fcc-learn-npm-package-json",
   "description": "learn backend",
-	"dependencies": {
-		"express": "^4.14.0"
-	},
-	"main": "server.js",
-	"scripts": {
-		"start": "node server.js"
-	},
-	"engines": {
-		"node": "8.11.2"
-	},  
-	"repository": {
-		"type": "git",
-		"url": "https://idontknow/todo.git"
-	}
+  "keywords": [
+    "learning",
+    "backend",
+    "with",
+    "glitch",
+    "and",
+    "freecodecamp"
+  ],
+  "license": "MIT",
+  "version": "1.0",
+  "dependencies": {
+    "express": "^4.14.0"
+  },
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "engines": {
+    "node": "8.11.2"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://idontknow/todo.git"
+  }
 }
